--- a/Examples/packages/repositories.config
+++ b/Examples/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\..\SolrExpress.Core\packages.config" />
   <repository path="..\..\SolrExpress.Solr5\packages.config" />
   <repository path="..\BasicUse\packages.config" />
+  <repository path="..\SearchUI\packages.config" />
 </repositories>
