--- a/Examples/SearchUI/SearchUI.csproj
+++ b/Examples/SearchUI/SearchUI.csproj
@@ -86,7 +86,15 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\css\bootstrap-theme.css" />
+    <Content Include="Content\css\bootstrap.css" />
+    <Content Include="Content\css\custom.css" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="packages.config" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -95,19 +103,28 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\material.blue-orange.min.css" />
-    <Content Include="Content\material.css" />
-    <Content Include="Content\custom.css" />
     <Content Include="index.html" />
-    <Content Include="Scripts\material.js" />
+    <Content Include="Scripts\angular.js" />
+    <Content Include="Scripts\app.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\DefaultController.cs" />
+    <Compile Include="Context\SolrContext.cs" />
+    <Compile Include="Controllers\SearchController.cs" />
+    <Compile Include="Models\TechProduct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Start.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\SolrExpress.Core\SolrExpress.Core.csproj">
+      <Project>{5be2cf22-c52a-4518-b3c6-c7c6a25e63a5}</Project>
+      <Name>SolrExpress.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SolrExpress.Solr5\SolrExpress.Solr5.csproj">
+      <Project>{3b679214-5e64-44ce-9188-d692f2371709}</Project>
+      <Name>SolrExpress.Solr5</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
