--- a/SolrExpress.Core.Tests/SolrExpress.Core.Tests.csproj
+++ b/SolrExpress.Core.Tests/SolrExpress.Core.Tests.csproj
@@ -60,6 +60,8 @@
   <ItemGroup>
     <Compile Include="Helper\UtilHelperTests.cs" />
     <Compile Include="ParameterValue\FreeValueTests.cs" />
+    <Compile Include="ParameterValue\MultiValueTests.cs" />
+    <Compile Include="ParameterValue\NegativeValueTests.cs" />
     <Compile Include="ParameterValue\QueryAllTests.cs" />
     <Compile Include="ParameterValue\RangeValueTests.cs" />
     <Compile Include="ParameterValue\SingleValueTests.cs" />
