--- a/SolrExpress.Solr4/SolrExpress.Solr4.csproj
+++ b/SolrExpress.Solr4/SolrExpress.Solr4.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Parameter\FacetFieldParameter.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Parameter\FacetLimitParameter.cs" />
     <Compile Include="Parameter\FacetQueryParameter.cs" />
     <Compile Include="Parameter\FacetRangeParameter.cs" />
     <Compile Include="Parameter\FieldListParameter.cs" />
