--- a/SolrExpress.Solr4/SolrExpress.Solr4.csproj
+++ b/SolrExpress.Solr4/SolrExpress.Solr4.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Parameter\FacetLimitParameter.cs" />
     <Compile Include="Parameter\FacetQueryParameter.cs" />
     <Compile Include="Parameter\FacetRangeParameter.cs" />
+    <Compile Include="Parameter\FacetSpatialParameter.cs" />
     <Compile Include="Parameter\FieldListParameter.cs" />
     <Compile Include="Parameter\FilterQueryParameter.cs" />
     <Compile Include="Parameter\MinimumShouldMatchParameter.cs" />
