--- a/SolrExpress.Solr5/SolrExpress.Solr5.csproj
+++ b/SolrExpress.Solr5/SolrExpress.Solr5.csproj
@@ -47,13 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Builder\BuilderFactory.cs" />
     <Compile Include="Builder\DocumentBuilder.cs" />
     <Compile Include="Builder\FacetFieldResultBuilder.cs" />
     <Compile Include="Builder\FacetQueryResultBuilder.cs" />
     <Compile Include="Builder\FacetRangeResultBuilder.cs" />
     <Compile Include="Builder\StatisticResultBuilder.cs" />
-    <Compile Include="Linq\SolrQueryableExtension.cs" />
-    <Compile Include="Linq\SolrQueryResultExtension.cs" />
     <Compile Include="Parameter\FacetFieldParameter.cs" />
     <Compile Include="Parameter\FacetLimitParameter.cs" />
     <Compile Include="Parameter\FacetQueryParameter.cs" />
@@ -64,6 +63,7 @@
     <Compile Include="Parameter\LimitParameter.cs" />
     <Compile Include="Parameter\MinimumShouldMatchParameter.cs" />
     <Compile Include="Parameter\OffsetParameter.cs" />
+    <Compile Include="Parameter\ParameterFactory.cs" />
     <Compile Include="Parameter\QueryFieldParameter.cs" />
     <Compile Include="Parameter\QueryParameter.cs" />
     <Compile Include="Parameter\SortParameter.cs" />
