--- a/SolrExpress.Core/SolrExpress.Core.nuspec
+++ b/SolrExpress.Core/SolrExpress.Core.nuspec
@@ -2,13 +2,14 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>SolrExpress.Core</id>
-    <version>1.0.0.1</version>
+    <version>1.1.0.0</version>
     <authors>Diego Luiz Brum</authors>
     <projectUrl>https://github.com/solr-express/solr-express</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Core library for a simple and lightweight query .NET library for Solr</description>
     <dependencies>
       <dependency id="Newtonsoft.Json" version="6.0.8" />
+      <dependency id="Microsoft.Net.Compilers" version="1.1.1" />
     </dependencies>
   </metadata>
   <files />
