--- a/SolrExpress.Core/SolrExpress.Core.Signed.nuspec
+++ b/SolrExpress.Core/SolrExpress.Core.Signed.nuspec
@@ -1,12 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>SolrExpress.Core</id>
+    <id>SolrExpress.Core.Signed</id>
     <version>1.1.0.0</version>
     <authors>Diego Luiz Brum</authors>
     <projectUrl>https://github.com/solr-express/solr-express</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Core library for a simple and lightweight query .NET library for Solr.</description>
+    <description>
+      Core library for a simple and lightweight query .NET library for Solr.
+      This is the signed version of the package.
+    </description>
     <dependencies>
       <dependency id="Newtonsoft.Json" version="6.0.8" />
       <dependency id="Microsoft.Net.Compilers" version="1.1.1" />
@@ -14,7 +17,7 @@
     <tags>SOLR C# .Net</tags>
   </metadata>
   <files>
-    <file src="bin\release\SolrExpress.Core.dll" target="lib\net4" />
-    <file src="bin\release\SolrExpress.Core.pdb" target="lib\net4" />
+    <file src="bin\ReleaseSigned\SolrExpress.Core.dll" target="lib\net4" />
+    <file src="bin\ReleaseSigned\SolrExpress.Core.pdb" target="lib\net4" />
   </files>
 </package>
