--- a/SolrExpress.Solr4/SolrExpress.Solr4.nuspec
+++ b/SolrExpress.Solr4/SolrExpress.Solr4.nuspec
@@ -1,20 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>SolrExpress.Solr4</id>
-    <version>1.1.0.1</version>
-    <authors>Diego Luiz Brum</authors>
+    <id>$id$</id>
+    <version>$version$</version>
+    <authors>$author$</authors>
+    <owners>$author$</owners>
     <projectUrl>https://github.com/solr-express/solr-express</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>A simple and lightweight query .NET library for Solr 4.x</description>
-    <dependencies>
-      <dependency id="Newtonsoft.Json" version="6.0.8" />
-      <dependency id="SolrExpress.Core" version="1.1.0.1" />
-      <dependency id="Microsoft.Net.Compilers" version="1.1.1" />
-    </dependencies>
+    <description>$description$</description>
+    <tags>SOLR C# .Net</tags>
   </metadata>
-  <files>
-    <file src="bin\ReleaseSigned\SolrExpress.Solr4.dll" target="lib\net4" />
-    <file src="bin\ReleaseSigned\SolrExpress.Solr4.pdb" target="lib\net4" />
-  </files>
 </package>
