--- a/SolrExpress.Core.Tests/SolrExpress.Core.Tests.csproj
+++ b/SolrExpress.Core.Tests/SolrExpress.Core.Tests.csproj
@@ -98,7 +98,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Helper\UtilHelperTests.cs" />
-    <Compile Include="ParameterValue\FreeValueTests.cs" />
+    <Compile Include="ParameterValue\AnyValueTests.cs" />
     <Compile Include="ParameterValue\MultiValueTests.cs" />
     <Compile Include="ParameterValue\NegativeValueTests.cs" />
     <Compile Include="ParameterValue\QueryAllTests.cs" />
