--- a/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj
+++ b/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Builder\FacetQueryResultBuilderTests.cs" />
     <Compile Include="Builder\FacetRangeResultBuilderTests.cs" />
     <Compile Include="Builder\StatisticResultBuilderTests.cs" />
+    <Compile Include="Parameter\AnyParameterTests.cs" />
     <Compile Include="Parameter\FacetFieldParameterTests.cs" />
     <Compile Include="Parameter\FacetLimitParameterTests.cs" />
     <Compile Include="Parameter\FacetQueryParameterTests.cs" />
