--- a/SolrExpress.Core.Tests/SolrExpress.Core.Tests.csproj
+++ b/SolrExpress.Core.Tests/SolrExpress.Core.Tests.csproj
@@ -98,12 +98,12 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Helper\UtilHelperTests.cs" />
-    <Compile Include="ParameterValue\AnyValueTests.cs" />
-    <Compile Include="ParameterValue\MultiValueTests.cs" />
-    <Compile Include="ParameterValue\NegativeValueTests.cs" />
+    <Compile Include="ParameterValue\AnyTests.cs" />
+    <Compile Include="ParameterValue\MultiTests.cs" />
+    <Compile Include="ParameterValue\NegateTests.cs" />
     <Compile Include="ParameterValue\QueryAllTests.cs" />
-    <Compile Include="ParameterValue\RangeValueTests.cs" />
-    <Compile Include="ParameterValue\SingleValueTests.cs" />
+    <Compile Include="ParameterValue\RangeTests.cs" />
+    <Compile Include="ParameterValue\SingleTests.cs" />
     <Compile Include="Query\SolrQueryableTests.cs" />
     <Compile Include="TestDocument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
