Core unit tests

--- a/SolrExpress.Core.Tests/SolrExpress.Core.Tests.csproj
+++ b/SolrExpress.Core.Tests/SolrExpress.Core.Tests.csproj
@@ -77,7 +77,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Helper\UtilHelperTests.cs" />
+    <Compile Include="Extension\Internal\ExpressionIDocumentExtensionTests.cs" />
+    <Compile Include="Extension\Internal\SolrSpatialFunctionTypeExtensionTests.cs" />
     <Compile Include="ParameterValue\AnyTests.cs" />
     <Compile Include="ParameterValue\MultiTests.cs" />
     <Compile Include="ParameterValue\NegateTests.cs" />
